[tool.poetry]
name = "arena-py"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
numpy = "^1.18.1"
paho-mqtt = "^1.5.0"
requests = "^2.23.0"
scipy = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
